<resources>
    <string name="app_name">"Indian Rail "</string>
    <string name="pnrstatus">PNR STATUS</string>
    <string name="trainbyno">Train by no</string>
    <string name="trainstatus">Train Status</string>
    <string name="searchTrain">Search Train</string>
    <string name="checkfare">Train Fare</string>
    <string name="setavailability">Availability</string>
    <string name="arraivalatstation">Arrival at ST.</string>
    <string name="cancelTrain">Cancelled Train</string>
    <string name="enterpnr">Enter PNR No</string>
    <string name="btnsearch">Find</string>
    <string name="ok">OK</string>
    <string name="journydetails">Journey Details</string>
    <string name="journy">No</string>
    <string name="journytrainName">Name</string>
    <string name="Boardingpoint">Board Po.</string>
    <string name="pick_date">Pick Date</string>
    <string name="JournyDate">Jouney Date</string>
    <string name="toStaion">To Station              :</string>
    <string name="dateOfjouney">Date of Journey    :</string>
    <string name="chartStatus">Chart Status          :</string>
    <string name="trainName">Chart Status          :</string>
    <string name="stationName">Station Name</string>
    <string name="toStation">To Station</string>
    <string name="jouneyDate">Journey Date</string>
    <string name="chartStatu">Chart Status</string>
</resources>